--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -12,26 +12,18 @@ http {
   server {
     listen 80;
 
-    # Health endpoint for ALB later
-    location /health {
-      return 200 "ok\n";
-      add_header Content-Type text/plain;
+    location / {
+      root /usr/share/nginx/html;
+      index index.html;
     }
 
-    # Auth routes
     location /auth/ {
       proxy_pass http://auth_service/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Task routes
     location /tasks/ {
       proxy_pass http://task_service/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
   }
+
 }
