--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+
   upstream auth_service {
     server auth-service:8000;
   }
@@ -12,18 +13,33 @@ http {
   server {
     listen 80;
 
+    # Serve UI
     location / {
       root /usr/share/nginx/html;
       index index.html;
     }
 
-    location /auth/ {
-      proxy_pass http://auth_service/;
+    # Health
+    location /health {
+      return 200 "ok\n";
+      add_header Content-Type text/plain;
     }
 
-    location /tasks/ {
-      proxy_pass http://task_service/;
+    # Auth routes (preserve full path)
+    location /auth {
+      proxy_pass http://auth_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # Task routes
+    location /tasks {
+      proxy_pass http://task_service;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
   }
-
 }
