--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -2,6 +2,6 @@ Flask==3.0.3
 gunicorn==22.0.0
 SQLAlchemy==2.0.32
 psycopg2-binary==2.9.9
-passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
+passlib==1.7.4
 PyJWT==2.9.0
+bcrypt==4.0.1
