Updated Gateway Nginx DNS Names

--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -3,11 +3,11 @@ events {}
 http {
 
   upstream auth_service {
-    server auth-service:8000;
+    server auth-service.taskflow.local:8000;
   }
 
   upstream task_service {
-    server task-service:8000;
+    server server task-service.taskflow.local:8000;
   }
 
   server {
