--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -7,7 +7,7 @@ http {
   }
 
   upstream task_service {
-    server server task-service.taskflow.local:8000;
+    server task-service.taskflow.local:8000;
   }
 
   server {
