--- a/api-gateway/nginx.conf
+++ b/api-gateway/nginx.conf
@@ -2,41 +2,44 @@ events {}
 
 http {
 
+  # Use ECS/VPC DNS resolver
+  resolver 169.254.169.253 valid=10s;
+
   upstream auth_service {
-    server auth-service.taskflow.local:8000;
+    zone auth_service 64k;
+    server auth-service.taskflow.local:8000 resolve;
   }
 
   upstream task_service {
-    server task-service.taskflow.local:8000;
+    zone task_service 64k;
+    server task-service.taskflow.local:8000 resolve;
   }
 
   server {
     listen 80;
 
-    # Serve UI
     location / {
       root /usr/share/nginx/html;
       index index.html;
     }
 
-    # Health
     location /health {
       return 200 "ok\n";
       add_header Content-Type text/plain;
     }
 
-    # Auth routes (preserve full path)
     location /auth {
       proxy_pass http://auth_service;
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Task routes
     location /tasks {
       proxy_pass http://task_service;
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
